--- a/css/blue.css
+++ b/css/blue.css
@@ -248,12 +248,13 @@ h6 {
 	clear:both;
 	font-size: 9px;
 	color:#7b90b5;
+	
 }
 
 hr {
     display: block;
-    height: 2px;
     border: 0;
+	border-style: inset;
     border-top: 2px solid #ccc;
     margin: 0.5em;
     padding: 0;
@@ -332,8 +333,9 @@ ul.info {
 
 ul.info li {
 	margin:0;
+	align:justify;
 	padding:0;
-	float:left;
+	float:right;
 	display: block;
 	width:500px;
 	background-image:url(../images/bullet.gif);
