--- a/css/blue.css
+++ b/css/blue.css
@@ -254,10 +254,12 @@ h6 {
 hr {
     display: block;
     border: 0;
+	width:828px;
 	border-style: inset;
     border-top: 2px solid #ccc;
     margin: 0.5em;
     padding: 0;
+	
 }
 em {
 	font-family: Georgia, "Times New Roman", serif;
