--- a/css/blue.css
+++ b/css/blue.css
@@ -254,10 +254,10 @@ h6 {
 hr {
     display: block;
     border: 0;
-	width:828px;
+	width:820px;
 	border-style: inset;
     border-top: 2px solid #ccc;
-    margin: 0.5em;
+    margin: 0;
     padding: 0;
 	
 }
